--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </div>
     </div>
 
+    <footer>
+        Shubham Rawat
+        <a href="https://github.com/Shubhamrawat23/Calculator" target="_blank"><img src="/images/github_733609.png" alt="github" id="github"></a>
+        <a href="https://www.linkedin.com/in/shubham-rawat01" target="_blank"><img src="/images/linkedin_3536569.png" alt="linkedin" id="linkedin"></a>
+    </footer>
     
     <script src="./script.js"></script>
 </body>
